fix: welcome footer alignment

--- a/src/app/shared/styles/app/material/welcome.scss
+++ b/src/app/shared/styles/app/material/welcome.scss
@@ -8,10 +8,10 @@
 }
 
 .footer {
-  width: 100%;
-  height: 48px;
-  font-size: 12px;
   position: fixed;
   bottom: 0;
-  z-index: 8;
+  width: 100%;
+  height: 34px;
+  font-size: 12px;
+  padding: 7px 24px;
 }
